logs/job_791.err
  File "/workspace/job.py", line 15
    python vqe.py
           ^^^
SyntaxError: invalid syntax
